// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getClientRoutes basic usage 1`] = `
[
  {
    "_component": "@_modern_js_src/pages/index.ts",
    "component": "Comp_pages_index_ts",
    "parent": undefined,
    "path": "/",
    "type": "page",
  },
  {
    "_component": "@_modern_js_src/pages/info.ts",
    "component": "Comp_pages_info_ts",
    "parent": undefined,
    "path": "/info",
    "type": "page",
  },
  {
    "_component": "@_modern_js_src/pages/about.ts",
    "component": "Comp_pages_about_ts",
    "parent": undefined,
    "path": "/about",
    "type": "page",
  },
]
`;

exports[`getClientRoutes nested routes with \`_app.tsx\` and \`_layout.tsx\` 1`] = `
[
  {
    "_component": "@_modern_js_src/pages/index.ts",
    "component": "Comp_pages_index_ts",
    "parent": undefined,
    "path": "/",
    "type": "page",
  },
  {
    "_component": "@_modern_js_internal/main/internal_components/L_a_Comp_pages_a_index_ts.jsx",
    "component": "L_a_Comp_pages_a_index_ts",
    "parent": undefined,
    "path": "/a",
    "type": "page",
  },
  {
    "_component": "@_modern_js_internal/main/internal_components/L_a_Comp_pages_a_list_index_ts.jsx",
    "component": "L_a_Comp_pages_a_list_index_ts",
    "parent": undefined,
    "path": "/a/list",
    "type": "page",
  },
  {
    "_component": "@_modern_js_internal/main/internal_components/L_a_Comp_pages_a_about_index_ts.jsx",
    "component": "L_a_Comp_pages_a_about_index_ts",
    "parent": undefined,
    "path": "/a/about",
    "type": "page",
  },
  {
    "_component": "@_modern_js_internal/main/internal_components/L_a_Comp_pages_a_list__id__index_ts.jsx",
    "component": "L_a_Comp_pages_a_list__id__index_ts",
    "parent": undefined,
    "path": "/a/list/:id",
    "type": "page",
  },
]
`;

exports[`getClientRoutesLegacy basic usage 1`] = `
[
  {
    "_component": "@_modern_js_src/pages/index.ts",
    "component": "Comp_pages_index_ts",
    "exact": true,
    "parent": undefined,
    "path": "/",
  },
  {
    "_component": "@_modern_js_src/pages/info.ts",
    "component": "Comp_pages_info_ts",
    "exact": true,
    "parent": undefined,
    "path": "/info",
  },
  {
    "_component": "@_modern_js_src/pages/about.ts",
    "component": "Comp_pages_about_ts",
    "exact": true,
    "parent": undefined,
    "path": "/about",
  },
]
`;

exports[`getClientRoutesLegacy nested routes with \`_app.tsx\` and \`_layout.tsx\` 1`] = `
[
  {
    "_component": "@_modern_js_src/pages/index.ts",
    "component": "Comp_pages_index_ts",
    "exact": true,
    "parent": undefined,
    "path": "/",
  },
  {
    "_component": "@_modern_js_internal/main/internal_components/L_a_Comp_pages_a_index_ts.jsx",
    "component": "L_a_Comp_pages_a_index_ts",
    "exact": true,
    "parent": undefined,
    "path": "/a",
  },
  {
    "_component": "@_modern_js_internal/main/internal_components/L_a_Comp_pages_a_list_index_ts.jsx",
    "component": "L_a_Comp_pages_a_list_index_ts",
    "exact": true,
    "parent": undefined,
    "path": "/a/list",
  },
  {
    "_component": "@_modern_js_internal/main/internal_components/L_a_Comp_pages_a_about_index_ts.jsx",
    "component": "L_a_Comp_pages_a_about_index_ts",
    "exact": true,
    "parent": undefined,
    "path": "/a/about",
  },
  {
    "_component": "@_modern_js_internal/main/internal_components/L_a_Comp_pages_a_list__id__index_ts.jsx",
    "component": "L_a_Comp_pages_a_list__id__index_ts",
    "exact": true,
    "parent": undefined,
    "path": "/a/list/:id",
  },
]
`;
